# Password-Strength-Meter

./: .env  pyproject.toml
.devcontainer/: devcontainer.json
src/pswrd-strenght-meter/: __init__.py
src/unit_converter/: app.py
