[project]
name = "unit-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MahneeraAzam", email = "minheraazam403@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.4",
    "ruff>=0.9.9",
    "streamlit>=1.42.2",
]

[project.scripts]
unit-converter = "unit_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
