[project]
name = "pswrd_strength_meter"  # Corrected package name
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MahneeraAzam", email = "minheraazam403@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=0.9.9",
    "google-generativeai>=0.8.4",
    "ruff>=0.9.9",
    "streamlit>=1.42.2",
]

[project.scripts]
pswrd-strength-meter = "pswrd_strength_meter.main:main"  # Correct path

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

